tests/parser/statement_assign_err3.expected
Syntax Error: line 5:
Unexpected token (TOK_EQ, '='), expected a token type of:  
  'TOK_ASSIGN' or
  'TOK_LPAREN'
