tests/parser/statement_assign_err3.mtp
begin
	(*Bad Assignment 2*)

	(*assignment statement: with factor (constant)*)
	something = 10;
end
.